5766
After https://github.com/scala/scala/pull/2043 the original example doesn't crash anymore but generates the same error as Hubert's example:
```scala
sandbox/t4425.scala:3: error: error during expansion of this match (this is a scalac bug).
The underlying error was: value _1 is not a member of object Foo.X
  42 match { case _ X _ => () }
     ^
```
